--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -23,6 +23,7 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="top|center_horizontal"
                 android:text="@string/no_qr_read"
+                android:textColor="@color/colorText"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -34,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
+                android:textColor="@color/colorText"
                 android:text="@string/activity_principal_info"
                 android:textAppearance="@android:style/TextAppearance.Material.Small"
                 app:layout_constraintBottom_toBottomOf="parent"
