--- a/app/src/main/res/layout/adapter_person.xml
+++ b/app/src/main/res/layout/adapter_person.xml
@@ -14,6 +14,7 @@
             android:id="@+id/adapter_person_tv_person_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorText"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             />
 
@@ -22,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
+            android:textColor="@color/colorText"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
             />
 
@@ -29,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
+            android:textColor="@color/colorText"
             android:textAppearance="@android:style/TextAppearance.Material.Small"
             />
 
