--- a/app/src/main/res/layout/fragment_page_films.xml
+++ b/app/src/main/res/layout/fragment_page_films.xml
@@ -2,11 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragmnet_page_film_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:gravity="center" >
 
-        <ImageView android:id="@+id/fragment_page_films_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+        <ImageView
+            android:id="@+id/fragment_page_films_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/dim_10" />
 
 </ScrollView>
