--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,8 @@
     <dimen name="dim_80">80dp</dimen>
     <dimen name="dim_90">90dp</dimen>
     <dimen name="dim_100">100dp</dimen>
+    <dimen name="dim_200">200dp</dimen>
+    <dimen name="dim_300">300dp</dimen>
+    <dimen name="dim_400">400dp</dimen>
+    <dimen name="dim_500">500dp</dimen>
 </resources>
